# fregot

./: .ghci  .gitignore  .gitmodules  .travis.yml  CHANGELOG.md  LICENSE  Makefile  README.md  cabal.project  fregot.cabal  stack.yaml
.circleci/: config.yml
.github/workflows/: binaries.yml  build-alpine.sh  build-darwin.sh  build-linux.sh  main.yml
examples/: README.md
examples/ami_id/: ami.tf  ami_id.rego  ami_id_debug.rego  ami_id_walkthrough.md  input.json  repl_input.json  test_ami_id.rego  test_ami_id_input.rego
examples/break_example/: break_example.rego
examples/demo/: demo.rego  demo.tf  demo_walkthrough.md  repl_demo_input.json  tutorial_walkthrough.md
extra/: capabilities-main.json  capabilities-master.json  capabilities-v0.12.3.json  capabilities-v0.14.1.json
extra/vscode/: package-lock.json  package.json
extra/vscode/src/: extension.ts
lib/Control/Monad/: Extended.hs  Parachute.hs  Stream.hs
lib/Data/: Cache.hs  DisjointSets.hs  Kleene.hs  Memoize.hs  SafeVar.hs  Unification.hs  Unique.hs
lib/Data/Aeson/: Extended.hs
lib/Data/Bifunctor/: Extended.hs
lib/Data/ByteString/: Extended.hs
lib/Data/HashSet/: Extended.hs
lib/Data/IORef/: Extended.hs
lib/Data/List/: Extended.hs
lib/Data/Text/: Extended.hs
lib/Data/Traversable/: HigherOrder.hs
lib/Data/Unique/: Internal.hs  Map.hs  Set.hs
lib/Data/Vector/: Extended.hs
lib/Data/Yaml/: Extended.hs
lib/Debug/Trace/: Extended.hs
lib/Fregot/: Arity.hs  Builtins.hs  Capabilities.hs  Dump.hs  Error.hs  Eval.hs  Find.hs  Interpreter.hs  Lexer.hs  Main.hs  Names.hs  Parser.hs  Prepare.hs  PrettyPrint.hs  Repl.hs  Sources.hs  Sugar.hs  Test.hs  Tree.hs  Version.hs
lib/Fregot/Builtins/: Base64.hs  Basics.hs  Graph.hs  Internal.hs  Json.hs  Jwt.hs  Object.hs  Regex.hs  RegexGlobsMatch.hs  Time.hs  Yaml.hs
lib/Fregot/Compile/: Graph.hs  Internal.hs  Order.hs  Package.hs
lib/Fregot/Error/: Stack.hs
lib/Fregot/Eval/: Bistream.hs  Builtins.hs  Cache.hs  Internal.hs  Json.hs  Monad.hs  Mu.hs  Number.hs  Rules.hs  TempObject.hs  Tree.hs  Value.hs
lib/Fregot/Interpreter/: Bundle.hs  Dependencies.hs  Package.hs
lib/Fregot/Lexer/: Comment.hs  Internal.hs  Position.hs  String.hs
lib/Fregot/Main/: Bundle.hs  Capabilities.hs  Eval.hs  GlobalOptions.hs  Lsp.hs  Repl.hs  Test.hs
lib/Fregot/Names/: Imports.hs  Renamer.hs
lib/Fregot/Parser/: Internal.hs  Sugar.hs  Token.hs
lib/Fregot/Prepare/: AST.hs  Ast.hs  BottomUp.hs  BuildTree.hs  ComprehensionIndex.hs  ConstantFold.hs  Json.hs  Lens.hs  Order.hs  Package.hs  ReOrder.hs  Vars.hs  Yaml.hs
lib/Fregot/PrettyPrint/: Internal.hs  Sem.hs
lib/Fregot/Repl/: Breakpoint.hs  FileWatch.hs  MTimes.hs  Multiline.hs  Parse.hs
lib/Fregot/Sources/: SourceSpan.hs
lib/Fregot/TypeCheck/: Builtins.hs  Infer.hs  Types.hs
lib/Fregot/Types/: Builtins.hs  Infer.hs  Internal.hs  Rule.hs  Value.hs
lib/Language/: Dot.hs
lib/Options/Applicative/: Extended.hs
lib/System/Directory/: Find.hs
lib/System/FilePath/: Extended.hs
lib/System/IO/: Extended.hs
lib/Text/Parsec/: Extended.hs
lib/Text/Printf/: Extended.hs
src/fregot/: Main.hs
src/fregot-repl/: Main.hs
src/fregot-test/: Main.hs
src/fspec/: Main.hs
tests/: bodies-01.rego  bodies-02.rego  default-01.rego  else-01.rego  how-do-i-write-policies.rego  json-01.rego  sets-01.rego
tests/golden/: invalid-unknown-var-01.rego  invalid-unknown-var-01.rego.stderr  invalid.spec
tests/golden/cli/: input.json  invalid.rego  json-01.goldplate  json-01.spec  json-01.stderr  repl-input.goldplate  repl-input.spec  repl-input.stderr  repl-input.stdout
tests/golden/eval/: datadocs-01.goldplate  datadocs-01.stdout  datadocs-02.goldplate  datadocs-02.stdout  datadocs-03.goldplate  datadocs-03.stdout  import-input-01.goldplate  import-input-01.json  import-input-01.stdout  import-input-02.goldplate  import-input-02.json  import-input-02.rego  import-input-02.stdout  import-input.rego  import-input.spec  simple.goldplate  simple.json  simple.rego  simple.spec  simple.stdout  trace.goldplate  trace.rego  trace.stderr
tests/golden/invalid/: assign-rule-01.rego  assign-rule-01.rego.stderr  bad-import.rego  bad-import.rego.stderr  builtins-01.rego  builtins-01.rego.stderr  builtins-01.rego.stdout  builtins-02.rego  builtins-02.rego.stderr  builtins-02.rego.stdout  default-index.rego  default-index.rego.stderr  default-index.rego.stdout  function-rule-01.rego  function-rule-01.rego.stderr  inconsistent.rego  inconsistent.rego.stderr  inconsistent.rego.stdout  invalid.goldplate  invalid.spec  missing-package-decl.rego  missing-package-decl.rego.stderr  obj-01.rego  obj-01.rego.stdout  obj-02.rego  obj-02.rego.stderr  parser-01.rego  parser-01.rego.stderr  recursive-01.rego  recursive-01.rego.stderr  recursive-02.rego  recursive-02.rego.stderr  recursive-03.rego  recursive-03.rego.stderr  stack-trace-01.rego  stack-trace-01.rego.stdout  tabs-spaces.rego  tabs-spaces.rego.stderr  tabs-spaces.rego.stdout  unknown-call-01.rego  (+14 more)
tests/golden/oneshot/: dep-cycle-01.rego  dep-cycle-02.rego  dep-cycle-03.rego  dep-cycle.spec  dep-cycle.stderr
tests/golden/opt/: bottom-up.rego  bottom-up.stderr  comprehension-index.rego  comprehension-index.stderr  opa-2497.rego  (+4 more)
tests/hs/: Main.hs
tests/rego/: assign-rule-01.rego  builtins-01.rego  builtins-02.rego  builtins-03.rego  builtins-04.rego  builtins-05.rego  builtins-06.rego  builtins-07.rego  builtins-08.rego  builtins-09.rego  builtins-10.rego  builtins-11.rego  builtins-12.rego  builtins-13.rego  builtins-compare.rego  builtins-graph-reachable.rego  builtins-json-patch-cases-01.rego  builtins-json-patch-cases-02.rego  builtins-json-patch-cases-03.rego  builtins-json-patch.rego  builtins-type-name.rego  data-json.rego  data-yaml.rego  data.json  data.yaml  default-01.rego  dyn-01-a.rego  dyn-01-b.rego  dyn-01.rego  dyn-02-a.rego  dyn-02.rego  else-01.rego  every-in-01.rego  every-in-02.rego  functions-01.rego  functions-02.rego  how-do-i-write-policies.rego  in-01.rego  indirect-references.rego  json-01.rego  (+41 more)
tests/weird/: README.md  obj-02.rego  recursion.rego
(+159 files in other folders)
