Name:                fregot
Version:             0.1.0
Synopsis:            Fugue Rego Toolkit
License:             AllRightsReserved
License-file:        LICENSE
Author:              Jasper Van der Jeugt
Maintainer:          jasper@fugue.co
Copyright:           Fugue, Inc.
Category:            Language
Build-type:          Simple
Cabal-version:       >= 1.18

Library
  Default-language: Haskell2010
  Ghc-options:      -Wall -Werror
  Hs-source-dirs:   lib

  Exposed-modules:
    Fregot.Error
    Fregot.Eval
    Fregot.Eval.Builtins
    Fregot.Eval.Json
    Fregot.Eval.Monad
    Fregot.Eval.Value
    Fregot.Find
    Fregot.Interpreter
    Fregot.Interpreter.Package
    Fregot.Lexer
    Fregot.Lexer.Comment
    Fregot.Lexer.Internal
    Fregot.Lexer.Position
    Fregot.Lexer.String
    Fregot.Main
    Fregot.Main.Repl
    Fregot.Main.Test
    Fregot.Parser
    Fregot.Parser.Internal
    Fregot.Parser.Sugar
    Fregot.Parser.Token
    Fregot.Prepare
    Fregot.Prepare.Ast
    Fregot.PrettyPrint
    Fregot.PrettyPrint.Internal
    Fregot.PrettyPrint.Sem
    Fregot.Repl
    Fregot.Repl.Multiline
    Fregot.Sources
    Fregot.Sources.SourceSpan
    Fregot.Sugar

    Control.Monad.Parachute
    Data.SafeVar
    Data.Unification
    Language.Dot

    Control.Monad.Extended
    Data.Aeson.TH.Extended
    Data.IORef.Extended
    Data.Vector.Extended
    System.Directory.Find
    System.IO.Extended
    Text.Parsec.Extended

    Paths_fregot

  Build-depends:
    aeson                >= 1.4  && < 1.5,
    annotated-wl-pprint  >= 0.7  && < 0.8,
    ansi-terminal        >= 0.8  && < 0.9,
    base                 >= 4    && < 5,
    blaze-html           >= 0.9  && < 0.10,
    directory            >= 1.3  && < 1.4,
    filepath             >= 1.4  && < 1.5,
    hashable             >= 1.2  && < 1.3,
    haskeline            >= 0.7  && < 0.8,
    lens                 >= 4.17 && < 4.18,
    mtl                  >= 2.2  && < 2.3,
    optparse-applicative >= 0.14 && < 0.15,
    parsec               >= 3.1  && < 4.2,
    scientific           >= 0.3  && < 0.4,
    text                 >= 1.2  && < 1.3,
    unordered-containers >= 0.2  && < 0.3,
    vector               >= 0.12 && < 0.13,
    vector-instances     >= 3.4  && < 3.5

Executable fregot
  Hs-source-dirs:    src
  Main-is:           Main.hs
  Default-language:  Haskell2010
  Ghc-options:       -Wall -Werror -rtsopts -threaded
  build-depends:     base, fregot

Test-suite fregot-tests
  Hs-source-dirs:    tests/hs
  Main-is:           Main.hs
  Type:              exitcode-stdio-1.0
  Default-language:  Haskell2010
  Ghc-options:       -Wall -Werror -rtsopts -threaded

  Other-modules:
    Data.SafeVar.Tests

  Build-depends:
    fregot,
    base     >= 4   && < 5,
    tasty    >= 1.2 && < 1.3
