Name:                fregot
Version:             0.12.3
Synopsis:            Fugue Rego Toolkit
License:             Apache-2.0
License-file:        LICENSE
Author:              Jasper Van der Jeugt <jasper@fugue.co>
Maintainer:          Jasper Van der Jeugt <jasper@fugue.co>
Copyright:           2020 Fugue, Inc
Category:            Language
Build-type:          Simple
Cabal-version:       1.18

Extra-source-files:
  CHANGELOG.md
  README.md

Library
  Default-language: Haskell2010
  Ghc-options:      -Wall
  Hs-source-dirs:   lib

  Exposed-modules:
    Fregot.Arity
    Fregot.Builtins
    Fregot.Builtins.Base64
    Fregot.Builtins.Basics
    Fregot.Builtins.Internal
    Fregot.Builtins.Json
    Fregot.Builtins.Jwt
    Fregot.Builtins.Regex
    Fregot.Builtins.Time
    Fregot.Capabilities
    Fregot.Compile.Graph
    Fregot.Compile.Order
    Fregot.Compile.Package
    Fregot.Dump
    Fregot.Error
    Fregot.Error.Stack
    Fregot.Eval
    Fregot.Eval.Cache
    Fregot.Eval.Internal
    Fregot.Eval.Json
    Fregot.Eval.Monad
    Fregot.Eval.Mu
    Fregot.Eval.Number
    Fregot.Eval.TempObject
    Fregot.Eval.Value
    Fregot.Eval.Value.Conversion
    Fregot.Find
    Fregot.Interpreter
    Fregot.Interpreter.Bundle
    Fregot.Interpreter.Dependencies
    Fregot.Lexer
    Fregot.Lexer.Comment
    Fregot.Lexer.Internal
    Fregot.Lexer.Position
    Fregot.Lexer.String
    Fregot.Main
    Fregot.Main.Bundle
    Fregot.Main.Capabilities
    Fregot.Main.Eval
    Fregot.Main.GlobalOptions
    Fregot.Main.Repl
    Fregot.Main.Test
    Fregot.Names
    Fregot.Names.Imports
    Fregot.Names.Renamer
    Fregot.Parser
    Fregot.Parser.Internal
    Fregot.Parser.Sugar
    Fregot.Parser.Token
    Fregot.Prepare
    Fregot.Prepare.Ast
    Fregot.Prepare.BuildTree
    Fregot.Prepare.ComprehensionIndex
    Fregot.Prepare.ConstantFold
    Fregot.Prepare.Json
    Fregot.Prepare.Lens
    Fregot.Prepare.Package
    Fregot.Prepare.Yaml
    Fregot.PrettyPrint
    Fregot.PrettyPrint.Internal
    Fregot.PrettyPrint.Sem
    Fregot.Repl
    Fregot.Repl.Breakpoint
    Fregot.Repl.FileWatch
    Fregot.Repl.Multiline
    Fregot.Repl.Parse
    Fregot.Sources
    Fregot.Sources.SourceSpan
    Fregot.Sugar
    Fregot.Test
    Fregot.Tree
    Fregot.Types.Builtins
    Fregot.Types.Infer
    Fregot.Types.Internal
    Fregot.Types.Rule
    Fregot.Types.Value
    Fregot.Version

    Control.Monad.Parachute
    Control.Monad.Stream
    Data.Cache
    Data.Memoize
    Data.Kleene
    Data.SafeVar
    Data.Traversable.HigherOrder
    Data.Unification
    Data.Unique
    Language.Dot

    Control.Monad.Except.Extended
    Control.Monad.Extended
    Data.Aeson.Extended
    Data.Aeson.TH.Extended
    Data.Bifunctor.Extended
    Data.ByteString.Extended
    Data.HashMap.Strict.Extended
    Data.HashSet.Extended
    Data.IORef.Extended
    Data.List.Extended
    Data.List.NonEmpty.Extended
    Data.Text.Extended
    Data.Vector.Extended
    Data.Yaml.Extended
    Debug.Trace.Extended
    Options.Applicative.Extended
    System.Console.Haskeline.Extended
    System.Directory.Find
    System.FilePath.Extended
    System.IO.Extended
    Text.Parsec.Extended
    Text.Printf.Extended

    Paths_fregot

  Build-depends:
    aeson                >= 1.4   && < 1.5,
    annotated-wl-pprint  >= 0.7   && < 0.8,
    ansi-terminal        >= 0.8   && < 0.11,
    async                >= 2.2   && < 2.3,
    base                 >= 4.9   && < 5,
    base16-bytestring    >= 0.1   && < 0.2,
    base64-bytestring    >= 1.0   && < 1.1,
    binary               >= 0.8   && < 0.9,
    blaze-html           >= 0.9   && < 0.10,
    bytestring           >= 0.10  && < 0.11,
    comonad              >= 5.0   && < 5.1,
    containers           >= 0.6   && < 0.7,
    directory            >= 1.3   && < 1.4,
    filepath             >= 1.4   && < 1.5,
    fsnotify             >= 0.3   && < 0.4,
    Glob                 >= 0.9   && < 0.11,
    hashable             >= 1.2   && < 1.4,
    haskeline            >= 0.7   && < 0.8,
    HsYAML               >= 0.2   && < 0.3,
    indents              >= 0.5   && < 0.6,
    jose                 >= 0.8.3 && < 0.9,
    lens                 >= 4.18  && < 4.19,
    mtl                  >= 2.2   && < 2.3,
    optparse-applicative >= 0.14  && < 0.16,
    parsec               >= 3.1   && < 4.2,
    pcre-simple          >= 0.1   && < 0.2,
    pem                  >= 0.2   && < 0.3,
    psqueues             >= 0.2   && < 0.3,
    scientific           >= 0.3   && < 0.4,
    text                 >= 1.2   && < 1.3,
    time                 >= 1.8   && < 1.10,
    timerep              >= 2.0   && < 2.1,
    unordered-containers >= 0.2   && < 0.3,
    vector               >= 0.12  && < 0.13,
    vector-instances     >= 3.4   && < 3.5,
    x509                 >= 1.7   && < 1.8,
    yaml                 >= 0.11  && < 0.12,
    zlib                 >= 0.6   && < 0.7

Executable fregot
  Hs-source-dirs:    src/fregot
  Main-is:           Main.hs
  Default-language:  Haskell2010
  Ghc-options:       -Wall -rtsopts -threaded -O2
  build-depends:     base, fregot

Test-suite fregot-tests
  Hs-source-dirs:    tests/hs
  Main-is:           Main.hs
  Type:              exitcode-stdio-1.0
  Default-language:  Haskell2010
  Ghc-options:       -Wall -rtsopts -threaded

  Other-modules:
    Data.Kleene.Tests
    Data.SafeVar.Tests
    Fregot.Compile.Order.Tests
    Fregot.Interpreter.Dependencies.Tests
    Fregot.Interpreter.Tests
    Fregot.Names.Tests
    Fregot.Parser.Tests
    Fregot.Prepare.Dsl
    Fregot.Prepare.Lens.Tests
    Fregot.Tree.Tests
    Fregot.Types.Internal.Tests
    System.Console.Haskeline.Tests
    Test.Tasty.Extended

  Build-depends:
    fregot,
    base                 >= 4.9  && < 5,
    containers           >= 0.6  && < 0.7,
    lens                 >= 4.18 && < 4.19,
    mtl                  >= 2.2  && < 2.3,
    tasty                >= 1.2  && < 1.3,
    tasty-hunit          >= 0.10 && < 0.11,
    unordered-containers >= 0.2  && < 0.3
